--- a/assets/scss/_breadcrumb.scss
+++ b/assets/scss/_breadcrumb.scss
@@ -134,13 +134,16 @@
   .breadcrumArea {
     margin-bottom: 0px !important;
     .bannerArea__wrapper {
-      margin-bottom: 15px;
+      margin-bottom: 60px;
+      h1 {
+        margin-top: 0px !important;
+      }
+      p {
+        width: 50%;
+      }
     }
     .banner-image {
       padding-bottom: 0px;
-      // img {
-      //   height: 280px;
-      // }
     }
   }
 }
@@ -162,7 +165,7 @@
       padding-bottom: 15px;
       padding-left: 15px;
       p {
-        max-width: 100%;
+        width: 100% !important;
       }
     }
     .banner-image {
@@ -190,7 +193,7 @@
     }
     .breadcrumb-wrapper {
       margin-top: 0px;
-      bottom: -50px;
+      bottom: -20px;
       left: 0px;
 
       .breadcrumb {
@@ -249,7 +252,7 @@
     }
 
     .breadcrumb-wrapper {
-      bottom: -75px !important;
+      bottom: -30px !important;
       left: 40px !important;
 
       .breadcrumb {
@@ -293,8 +296,8 @@
     }
 
     .breadcrumb-wrapper {
-      bottom: -75px;
-      left: 0px;
+      bottom: -25px;
+      left: 30px;
 
       .breadcrumb {
         padding: 10px 15px !important;
